lab2/Code/syntax.output
State 22 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList
    2        | ExtDefList error

    3 ExtDefList: ExtDef ExtDefList
    4           | %empty

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList
   11           | VarDec error

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT OptTag LC DefList error
   17                | STRUCT OptTag LC error RC
   18                | STRUCT error LC DefList RC

   19 OptTag: ID
   20       | %empty

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB
   24       | VarDec LB error RB

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | ID LP error
   28       | ID LP error RP

   29 VarList: ParamDec COMMA VarList
   30        | ParamDec
   31        | ParamDec COMMA error

   32 ParamDec: Specifier VarDec
   33         | Specifier error

   34 CompSt: LC DefList StmtList RC
   35       | error RC

   36 StmtList: Stmt StmtList
   37         | %empty

   38 Stmt: Exp SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | IF LP Exp RP Stmt
   42     | IF LP Exp RP Stmt ELSE Stmt
   43     | WHILE LP Exp RP Stmt
   44     | RETURN error SEMI
   45     | error SEMI
   46     | IF LP error RP Stmt
   47     | IF error Exp RP Stmt
   48     | IF LP Exp error Stmt
   49     | IF error Exp RP Stmt ELSE Stmt
   50     | IF LP error RP Stmt ELSE Stmt
   51     | IF LP Exp error Stmt ELSE Stmt
   52     | IF LP Exp RP error ELSE Stmt
   53     | WHILE error Exp RP Stmt
   54     | WHILE LP error RP Stmt
   55     | WHILE LP Exp error Stmt

   56 DefList: Def DefList
   57        | %empty

   58 Def: Specifier DecList SEMI
   59    | Specifier error SEMI
   60    | Specifier DecList error

   61 DecList: Dec
   62        | Dec COMMA DecList
   63        | Dec error DecList
   64        | Dec error

   65 Dec: VarDec
   66    | VarDec ASSIGNOP Exp
   67    | VarDec ASSIGNOP error

   68 Exp: Exp ASSIGNOP Exp
   69    | Exp AND Exp
   70    | Exp OR Exp
   71    | Exp RELOP Exp
   72    | Exp PLUS Exp
   73    | Exp MINUS Exp
   74    | Exp STAR Exp
   75    | Exp DIV Exp
   76    | LP Exp RP
   77    | MINUS Exp
   78    | NOT Exp
   79    | ID LP Args RP
   80    | ID LP RP
   81    | Exp LB Exp RB
   82    | Exp DOT ID
   83    | ID
   84    | INT
   85    | FLOAT
   86    | Exp LB error RB
   87    | error RP
   88    | ID LP Args error
   89    | ID LP error
   90    | Exp ASSIGNOP error
   91    | Exp AND error
   92    | Exp OR error
   93    | Exp RELOP error
   94    | Exp PLUS error
   95    | Exp MINUS error
   96    | Exp STAR error
   97    | Exp DIV error
   98    | MINUS error
   99    | NOT error
  100    | LP Exp error

  101 Args: Exp COMMA Args
  102     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 2 8 11 16 17 18 24 27 28 31 33 35 44 45 46 47 48 49 50 51 52 53 54 55 59 60 63 64 67 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
    INT <type_int> (258) 23 84
    FLOAT <type_float> (259) 85
    ID <type_string> (260) 19 21 22 25 26 27 28 79 80 82 83 88 89
    TYPE <type_string> (261) 12
    SEMI (262) 5 6 38 40 44 45 58 59
    COMMA (263) 10 29 31 62 101
    RELOP (264) 71 93
    ASSIGNOP (265) 66 67 68 90
    PLUS (266) 72 94
    MINUS (267) 73 77 95 98
    STAR (268) 74 96
    DIV (269) 75 97
    AND (270) 69 91
    OR (271) 70 92
    DOT (272) 82
    NOT (273) 78 99
    LP (274) 25 26 27 28 41 42 43 46 48 50 51 52 54 55 76 79 80 88 89 100
    RP (275) 25 26 28 41 42 43 46 47 49 50 52 53 54 76 79 80 87
    LB (276) 23 24 81 86
    RB (277) 23 24 81 86
    LC (278) 14 16 17 18 34
    RC (279) 14 17 18 34 35
    STRUCT (280) 14 15 16 17 18
    RETURN (281) 40 44
    IF (282) 41 42 46 47 48 49 50 51 52
    ELSE (283) 42 49 50 51 52
    WHILE (284) 43 53 54 55
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <type_pnode> (32)
        on left: 1 2
        on right: 0
    ExtDefList <type_pnode> (33)
        on left: 3 4
        on right: 1 2 3
    ExtDef <type_pnode> (34)
        on left: 5 6 7 8
        on right: 3
    ExtDecList <type_pnode> (35)
        on left: 9 10 11
        on right: 5 10
    Specifier <type_pnode> (36)
        on left: 12 13
        on right: 5 6 7 8 32 33 58 59 60
    StructSpecifier <type_pnode> (37)
        on left: 14 15 16 17 18
        on right: 13
    OptTag <type_pnode> (38)
        on left: 19 20
        on right: 14 16 17
    Tag <type_pnode> (39)
        on left: 21
        on right: 15
    VarDec <type_pnode> (40)
        on left: 22 23 24
        on right: 9 10 11 23 24 32 65 66 67
    FunDec <type_pnode> (41)
        on left: 25 26 27 28
        on right: 7
    VarList <type_pnode> (42)
        on left: 29 30 31
        on right: 25 29
    ParamDec <type_pnode> (43)
        on left: 32 33
        on right: 29 30 31
    CompSt <type_pnode> (44)
        on left: 34 35
        on right: 7 39
    StmtList <type_pnode> (45)
        on left: 36 37
        on right: 34 36
    Stmt <type_pnode> (46)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 36 41 42 43 46 47 48 49 50 51 52 53 54 55
    DefList <type_pnode> (47)
        on left: 56 57
        on right: 14 16 18 34 56
    Def <type_pnode> (48)
        on left: 58 59 60
        on right: 56
    DecList <type_pnode> (49)
        on left: 61 62 63 64
        on right: 58 60 62 63
    Dec <type_pnode> (50)
        on left: 65 66 67
        on right: 61 62 63 64
    Exp <type_pnode> (51)
        on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
        on right: 38 40 41 42 43 47 48 49 51 52 53 55 66 68 69 70 71 72 73 74 75 76 77 78 81 82 86 90 91 92 93 94 95 96 97 100 101 102
    Args <type_pnode> (52)
        on left: 101 102
        on right: 79 88 101


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 2

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . OptTag LC DefList error
   17                | STRUCT . OptTag LC error RC
   18                | STRUCT . error LC DefList RC

    error  shift, and go to state 8
    ID     shift, and go to state 9

    LC  reduce using rule 20 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 4

    1 Program: ExtDefList .
    2        | ExtDefList . error

    error  shift, and go to state 13

    $end  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   18 StructSpecifier: STRUCT error . LC DefList RC

    LC  shift, and go to state 21


State 9

   19 OptTag: ID .
   21 Tag: ID .

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 21 (Tag)


State 10

   14 StructSpecifier: STRUCT OptTag . LC DefList RC
   16                | STRUCT OptTag . LC DefList error
   17                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 22


State 11

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 Program: ExtDefList error .

    $default  reduce using rule 2 (Program)


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

    8 ExtDef: Specifier error .

    $default  reduce using rule 8 (ExtDef)


State 16

   22 VarDec: ID .
   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP error
   28       | ID . LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 22 (VarDec)


State 17

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 18

    5 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   11           | VarDec . error
   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB

    error  shift, and go to state 25
    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    SEMI  reduce using rule 9 (ExtDecList)


State 20

    7 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   18 StructSpecifier: STRUCT error LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 57 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 32
    Def              go to state 33


State 22

   14 StructSpecifier: STRUCT OptTag LC . DefList RC
   16                | STRUCT OptTag LC . DefList error
   17                | STRUCT OptTag LC . error RC

    error   shift, and go to state 34
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error  [reduce using rule 57 (DefList)]
    RC     reduce using rule 57 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 35
    Def              go to state 33


State 23

   25 FunDec: ID LP . VarList RP
   26       | ID LP . RP
   27       | ID LP . error
   28       | ID LP . error RP

    error   shift, and go to state 36
    TYPE    shift, and go to state 1
    RP      shift, and go to state 37
    STRUCT  shift, and go to state 2

    Specifier        go to state 38
    StructSpecifier  go to state 7
    VarList          go to state 39
    ParamDec         go to state 40


State 24

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 25

   11 ExtDecList: VarDec error .

    $default  reduce using rule 11 (ExtDecList)


State 26

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 42
    VarDec      go to state 19


State 27

   23 VarDec: VarDec LB . INT RB
   24       | VarDec LB . error RB

    error  shift, and go to state 43
    INT    shift, and go to state 44


State 28

   35 CompSt: error . RC

    RC  shift, and go to state 45


State 29

   34 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 57 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 33


State 30

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 31

   58 Def: Specifier . DecList SEMI
   59    | Specifier . error SEMI
   60    | Specifier . DecList error

    error  shift, and go to state 47
    ID     shift, and go to state 41

    VarDec   go to state 48
    DecList  go to state 49
    Dec      go to state 50


State 32

   18 StructSpecifier: STRUCT error LC DefList . RC

    RC  shift, and go to state 51


State 33

   56 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 57 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 52
    Def              go to state 33


State 34

   17 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 53


State 35

   14 StructSpecifier: STRUCT OptTag LC DefList . RC
   16                | STRUCT OptTag LC DefList . error

    error  shift, and go to state 54
    RC     shift, and go to state 55


State 36

   27 FunDec: ID LP error .
   28       | ID LP error . RP

    RP  shift, and go to state 56

    $default  reduce using rule 27 (FunDec)


State 37

   26 FunDec: ID LP RP .

    $default  reduce using rule 26 (FunDec)


State 38

   32 ParamDec: Specifier . VarDec
   33         | Specifier . error

    error  shift, and go to state 57
    ID     shift, and go to state 41

    VarDec  go to state 58


State 39

   25 FunDec: ID LP VarList . RP

    RP  shift, and go to state 59


State 40

   29 VarList: ParamDec . COMMA VarList
   30        | ParamDec .
   31        | ParamDec . COMMA error

    COMMA  shift, and go to state 60

    $default  reduce using rule 30 (VarList)


State 41

   22 VarDec: ID .

    $default  reduce using rule 22 (VarDec)


State 42

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 43

   24 VarDec: VarDec LB error . RB

    RB  shift, and go to state 61


State 44

   23 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 62


State 45

   35 CompSt: error RC .

    $default  reduce using rule 35 (CompSt)


State 46

   34 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 29
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 73
    StmtList  go to state 74
    Stmt      go to state 75
    Exp       go to state 76


State 47

   59 Def: Specifier error . SEMI

    SEMI  shift, and go to state 77


State 48

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   65 Dec: VarDec .
   66    | VarDec . ASSIGNOP Exp
   67    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 78
    LB        shift, and go to state 27

    $default  reduce using rule 65 (Dec)


State 49

   58 Def: Specifier DecList . SEMI
   60    | Specifier DecList . error

    error  shift, and go to state 79
    SEMI   shift, and go to state 80


State 50

   61 DecList: Dec .
   62        | Dec . COMMA DecList
   63        | Dec . error DecList
   64        | Dec . error

    error  shift, and go to state 81
    COMMA  shift, and go to state 82

    error  [reduce using rule 61 (DecList)]
    SEMI   reduce using rule 61 (DecList)


State 51

   18 StructSpecifier: STRUCT error LC DefList RC .

    $default  reduce using rule 18 (StructSpecifier)


State 52

   56 DefList: Def DefList .

    $default  reduce using rule 56 (DefList)


State 53

   17 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 17 (StructSpecifier)


State 54

   16 StructSpecifier: STRUCT OptTag LC DefList error .

    $default  reduce using rule 16 (StructSpecifier)


State 55

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 56

   28 FunDec: ID LP error RP .

    $default  reduce using rule 28 (FunDec)


State 57

   33 ParamDec: Specifier error .

    $default  reduce using rule 33 (ParamDec)


State 58

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   32 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 32 (ParamDec)


State 59

   25 FunDec: ID LP VarList RP .

    $default  reduce using rule 25 (FunDec)


State 60

   29 VarList: ParamDec COMMA . VarList
   31        | ParamDec COMMA . error

    error   shift, and go to state 83
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 38
    StructSpecifier  go to state 7
    VarList          go to state 84
    ParamDec         go to state 40


State 61

   24 VarDec: VarDec LB error RB .

    $default  reduce using rule 24 (VarDec)


State 62

   23 VarDec: VarDec LB INT RB .

    $default  reduce using rule 23 (VarDec)


State 63

   35 CompSt: error . RC
   45 Stmt: error . SEMI
   87 Exp: error . RP

    SEMI  shift, and go to state 85
    RP    shift, and go to state 86
    RC    shift, and go to state 45


State 64

   84 Exp: INT .

    $default  reduce using rule 84 (Exp)


State 65

   85 Exp: FLOAT .

    $default  reduce using rule 85 (Exp)


State 66

   79 Exp: ID . LP Args RP
   80    | ID . LP RP
   83    | ID .
   88    | ID . LP Args error
   89    | ID . LP error

    LP  shift, and go to state 87

    $default  reduce using rule 83 (Exp)


State 67

   77 Exp: MINUS . Exp
   98    | MINUS . error

    error  shift, and go to state 88
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 89


State 68

   78 Exp: NOT . Exp
   99    | NOT . error

    error  shift, and go to state 90
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 91


State 69

   76 Exp: LP . Exp RP
  100    | LP . Exp error

    error  shift, and go to state 92
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 93


State 70

   40 Stmt: RETURN . Exp SEMI
   44     | RETURN . error SEMI

    error  shift, and go to state 94
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 95


State 71

   41 Stmt: IF . LP Exp RP Stmt
   42     | IF . LP Exp RP Stmt ELSE Stmt
   46     | IF . LP error RP Stmt
   47     | IF . error Exp RP Stmt
   48     | IF . LP Exp error Stmt
   49     | IF . error Exp RP Stmt ELSE Stmt
   50     | IF . LP error RP Stmt ELSE Stmt
   51     | IF . LP Exp error Stmt ELSE Stmt
   52     | IF . LP Exp RP error ELSE Stmt

    error  shift, and go to state 96
    LP     shift, and go to state 97


State 72

   43 Stmt: WHILE . LP Exp RP Stmt
   53     | WHILE . error Exp RP Stmt
   54     | WHILE . LP error RP Stmt
   55     | WHILE . LP Exp error Stmt

    error  shift, and go to state 98
    LP     shift, and go to state 99


State 73

   39 Stmt: CompSt .

    $default  reduce using rule 39 (Stmt)


State 74

   34 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 100


State 75

   36 StmtList: Stmt . StmtList

    error   shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 29
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 73
    StmtList  go to state 101
    Stmt      go to state 75
    Exp       go to state 76


State 76

   38 Stmt: Exp . SEMI
   68 Exp: Exp . ASSIGNOP Exp
   69    | Exp . AND Exp
   70    | Exp . OR Exp
   71    | Exp . RELOP Exp
   72    | Exp . PLUS Exp
   73    | Exp . MINUS Exp
   74    | Exp . STAR Exp
   75    | Exp . DIV Exp
   81    | Exp . LB Exp RB
   82    | Exp . DOT ID
   86    | Exp . LB error RB
   90    | Exp . ASSIGNOP error
   91    | Exp . AND error
   92    | Exp . OR error
   93    | Exp . RELOP error
   94    | Exp . PLUS error
   95    | Exp . MINUS error
   96    | Exp . STAR error
   97    | Exp . DIV error

    SEMI      shift, and go to state 102
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104
    PLUS      shift, and go to state 105
    MINUS     shift, and go to state 106
    STAR      shift, and go to state 107
    DIV       shift, and go to state 108
    AND       shift, and go to state 109
    OR        shift, and go to state 110
    DOT       shift, and go to state 111
    LB        shift, and go to state 112


State 77

   59 Def: Specifier error SEMI .

    $default  reduce using rule 59 (Def)


State 78

   66 Dec: VarDec ASSIGNOP . Exp
   67    | VarDec ASSIGNOP . error

    error  shift, and go to state 113
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 114


State 79

   60 Def: Specifier DecList error .

    $default  reduce using rule 60 (Def)


State 80

   58 Def: Specifier DecList SEMI .

    $default  reduce using rule 58 (Def)


State 81

   63 DecList: Dec error . DecList
   64        | Dec error .

    ID  shift, and go to state 41

    $default  reduce using rule 64 (DecList)

    VarDec   go to state 48
    DecList  go to state 115
    Dec      go to state 50


State 82

   62 DecList: Dec COMMA . DecList

    ID  shift, and go to state 41

    VarDec   go to state 48
    DecList  go to state 116
    Dec      go to state 50


State 83

   31 VarList: ParamDec COMMA error .

    $default  reduce using rule 31 (VarList)


State 84

   29 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 29 (VarList)


State 85

   45 Stmt: error SEMI .

    $default  reduce using rule 45 (Stmt)


State 86

   87 Exp: error RP .

    $default  reduce using rule 87 (Exp)


State 87

   79 Exp: ID LP . Args RP
   80    | ID LP . RP
   88    | ID LP . Args error
   89    | ID LP . error

    error  shift, and go to state 117
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    RP     shift, and go to state 118

    Exp   go to state 119
    Args  go to state 120


State 88

   87 Exp: error . RP
   98    | MINUS error .

    RP  shift, and go to state 86

    $default  reduce using rule 98 (Exp)


State 89

   68 Exp: Exp . ASSIGNOP Exp
   69    | Exp . AND Exp
   70    | Exp . OR Exp
   71    | Exp . RELOP Exp
   72    | Exp . PLUS Exp
   73    | Exp . MINUS Exp
   74    | Exp . STAR Exp
   75    | Exp . DIV Exp
   77    | MINUS Exp .
   81    | Exp . LB Exp RB
   82    | Exp . DOT ID
   86    | Exp . LB error RB
   90    | Exp . ASSIGNOP error
   91    | Exp . AND error
   92    | Exp . OR error
   93    | Exp . RELOP error
   94    | Exp . PLUS error
   95    | Exp . MINUS error
   96    | Exp . STAR error
   97    | Exp . DIV error

    STAR  shift, and go to state 107
    DIV   shift, and go to state 108
    DOT   shift, and go to state 111
    LB    shift, and go to state 112

    $default  reduce using rule 77 (Exp)


State 90

   87 Exp: error . RP
   99    | NOT error .

    RP  shift, and go to state 86

    $default  reduce using rule 99 (Exp)


State 91

   68 Exp: Exp . ASSIGNOP Exp
   69    | Exp . AND Exp
   70    | Exp . OR Exp
   71    | Exp . RELOP Exp
   72    | Exp . PLUS Exp
   73    | Exp . MINUS Exp
   74    | Exp . STAR Exp
   75    | Exp . DIV Exp
   78    | NOT Exp .
   81    | Exp . LB Exp RB
   82    | Exp . DOT ID
   86    | Exp . LB error RB
   90    | Exp . ASSIGNOP error
   91    | Exp . AND error
   92    | Exp . OR error
   93    | Exp . RELOP error
   94    | Exp . PLUS error
   95    | Exp . MINUS error
   96    | Exp . STAR error
   97    | Exp . DIV error

    DOT  shift, and go to state 111
    LB   shift, and go to state 112

    $default  reduce using rule 78 (Exp)


State 92

   87 Exp: error . RP

    RP  shift, and go to state 86


State 93

   68 Exp: Exp . ASSIGNOP Exp
   69    | Exp . AND Exp
   70    | Exp . OR Exp
   71    | Exp . RELOP Exp
   72    | Exp . PLUS Exp
   73    | Exp . MINUS Exp
   74    | Exp . STAR Exp
   75    | Exp . DIV Exp
   76    | LP Exp . RP
   81    | Exp . LB Exp RB
   82    | Exp . DOT ID
   86    | Exp . LB error RB
   90    | Exp . ASSIGNOP error
   91    | Exp . AND error
   92    | Exp . OR error
   93    | Exp . RELOP error
   94    | Exp . PLUS error
   95    | Exp . MINUS error
   96    | Exp . STAR error
   97    | Exp . DIV error
  100    | LP Exp . error

    error     shift, and go to state 121
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104
    PLUS      shift, and go to state 105
    MINUS     shift, and go to state 106
    STAR      shift, and go to state 107
    DIV       shift, and go to state 108
    AND       shift, and go to state 109
    OR        shift, and go to state 110
    DOT       shift, and go to state 111
    RP        shift, and go to state 122
    LB        shift, and go to state 112


State 94

   44 Stmt: RETURN error . SEMI
   87 Exp: error . RP

    SEMI  shift, and go to state 123
    RP    shift, and go to state 86


State 95

   40 Stmt: RETURN Exp . SEMI
   68 Exp: Exp . ASSIGNOP Exp
   69    | Exp . AND Exp
   70    | Exp . OR Exp
   71    | Exp . RELOP Exp
   72    | Exp . PLUS Exp
   73    | Exp . MINUS Exp
   74    | Exp . STAR Exp
   75    | Exp . DIV Exp
   81    | Exp . LB Exp RB
   82    | Exp . DOT ID
   86    | Exp . LB error RB
   90    | Exp . ASSIGNOP error
   91    | Exp . AND error
   92    | Exp . OR error
   93    | Exp . RELOP error
   94    | Exp . PLUS error
   95    | Exp . MINUS error
   96    | Exp . STAR error
   97    | Exp . DIV error

    SEMI      shift, and go to state 124
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 104
    PLUS      shift, and go to state 105
    MINUS     shift, and go to state 106
    STAR      shift, and go to state 107
    DIV       shift, and go to state 108
    AND       shift, and go to state 109
    OR        shift, and go to state 110
    DOT       shift, and go to state 111
    LB        shift, and go to state 112


State 96

   47 Stmt: IF error . Exp RP Stmt
   49     | IF error . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 92
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 125


State 97

   41 Stmt: IF LP . Exp RP Stmt
   42     | IF LP . Exp RP Stmt ELSE Stmt
   46     | IF LP . error RP Stmt
   48     | IF LP . Exp error Stmt
   50     | IF LP . error RP Stmt ELSE Stmt
   51     | IF LP . Exp error Stmt ELSE Stmt
   52     | IF LP . Exp RP error ELSE Stmt

    error  shift, and go to state 126
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 127


State 98

   53 Stmt: WHILE error . Exp RP Stmt

    error  shift, and go to state 92
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 128

